# agentes-langgraph

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  pyproject58.toml
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-notebook.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured-output.ipynb  09-prompting.ipynb  10-tools.ipynb  11-conditions.ipynb  parallezition.ipynb
src/agents/: main.py  rag.py  rag_chaining.py  simple.py
src/agents/support/: agent.py
src/agents/support/nodes/booking/: node.py  tools.py
src/agents/support/nodes/conversation/: node.py  prompt.py
src/agents/support/nodes/extractor/: node.py  prompt.py
src/agents/support/routes/intent/: route.py
