[project]
name = "agentes-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "jinja2>=3.1.6",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-api>=0.11.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.27",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
